# math-anything

./: .gitignore  API.md  CBES_Mathematical_Analysis_Tao.md  CBES_Optimized_Paper_Generator.py  CBES_Structure_Optimizer.py  CHANGELOG.md  CONTRIBUTING.md  INTRODUCTION.md  INTRODUCTION_SHORT.md  LATENT_SPACE_ANALYSIS.md  LICENSE  MANIFEST.in  QUICK_START.md  Qwen3.5-4B_Validation_Report.md  Qwen3.5-4B_Validation_Report_EN.md  Qwen3.5_Validation_Report_CN.md  Qwen3.5_Validation_Report_EN.md  README.md  README_CN.md  TIERED_SYSTEM.md  TOPOLOGY_MANIFOLD_ANALYSIS.md  TUTORIAL.md  TUTORIAL_AERO_EN.md  TUTORIAL_EN.md  TUTORIAL_FLUID_EN.md  TUTORIAL_HYDROGEN_CN.md  TUTORIAL_MANUFACTURING_CN.md  TUTORIAL_QUANTUM_CN.md  UNIFIED_MATH_FRAMEWORK.md  WORKFLOW.md  _check_ci.py  _download_artifact.py  _get_logs.py  _wait_ci.py  analyze_original_structure.py  build.py  build_exe.py  codecov.yml  comprehensive_data_analysis.py  core_mathematical_proposition.py  (+13 more)
math-anything/: .dockerignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SKILL.md  claude_desktop_config.json  docker-compose.yml  mcp_config.json  mcp_server.py  pyproject.toml  run_tests.py
math-anything-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
math-anything-app/src-tauri/capabilities/: default.json
math-anything-app/src-tauri/src/: main.rs
math-anything/.github/: dependabot.yml
math-anything/.github/workflows/: ci.yml  publish.yml  security.yml
math-anything/.superpowers/sdd/: progress.md
math-anything/abaqus-harness/: setup.py
math-anything/abaqus-harness/math_anything/: __init__.py
math-anything/ansys-harness/math_anything/: __init__.py
math-anything/bourbaki/: __init__.py
math-anything/bourbaki-vscode/: .eslintrc.json  .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  README.md  lsp_server.py  package.json  tsconfig.json
math-anything/bourbaki-vscode/src/: analysisProvider.ts  analysisWebview.ts  completionProvider.ts  domainProvider.ts  extension.ts  hoverProvider.ts
math-anything/bourbaki-vscode/syntaxes/: abaqus.tmLanguage.json  gromacs.tmLanguage.json  lammps.tmLanguage.json  openfoam.tmLanguage.json  qe-in.tmLanguage.json  vasp-incar.tmLanguage.json  vasp-poscar.tmLanguage.json
math-anything/comsol-harness/math_anything/: __init__.py
math-anything/core/: README.md  setup.py
math-anything/core/math_anything/: __init__.py  advisor.py  agent_loop.py  algorithm_knowledge_graph.py  api.py  cli.py  emergence.py  eml.py  eml_v2.py  exceptions.py  firewall.py  formal_verifier.py  lean4_bridge.py  models.py  multivar.py  proof_verifier.py  proposition.py  provenance.py  references.py  sandbox.py  security.py  server.py  simplifier.py  tool_registry.py  tool_system.py  validation_toolkit.py  visualization.py
math-anything/core/tests/: test_codegen.py  test_cross_engine.py  test_exceptions.py  test_extensions.py  test_math_diff.py  test_models.py  test_precision.py  test_schema.py  test_security.py  test_streaming_parser.py  test_tiered.py
math-anything/docs/: conf.py  index.rst  mcp.md
math-anything/docs/adr/: 001-rust-acceleration.md  002-conservation-matrix-field.md  003-progressive-unlock.md  003-semantic-cache.md
math-anything/engines/: __init__.py  base.py
math-anything/engines/ansys/: __init__.py
math-anything/engines/comsol/: __init__.py
math-anything/engines/cp2k/: __init__.py
math-anything/engines/dakota/: __init__.py
math-anything/engines/fluent/: __init__.py
math-anything/engines/gamess/: __init__.py
math-anything/engines/gaussian/: __init__.py
math-anything/engines/liggghts/: __init__.py
math-anything/engines/multiwfn/: __init__.py
math-anything/engines/nwchem/: __init__.py
math-anything/engines/openfoam/: __init__.py
math-anything/engines/su2/: __init__.py
math-anything/engines/vasp/: __init__.py
math-anything/engines/voxel/: __init__.py
math-anything/examples/: example_cross_engine.py  example_diff.py  example_extensions.py  example_fix_deform.py  example_vasp.py  streaming_parse_example.py  voxel_example.py
math-anything/gromacs-harness/math_anything/: __init__.py
math-anything/lammps-harness/: setup.py
math-anything/lammps-harness/math_anything/: __init__.py
math-anything/lammps-harness/tests/: test_fix_deform.py
math-anything/math_anything/: __init__.py  __main__.py  _compat.py  api.py  api_schema.py  bridge.py  cli.py  config.py  eml_v2.py  exceptions.py  llm_client.py  logging.py  mcp_server.py  multivar.py  plugin.py  rust_bridge.py  simplifier.py  types.py  visualization.py
math-anything/math_anything/adapters/: __init__.py
math-anything/math_anything/ai/: inference.py  nlp_interface.py
math-anything/math_anything/auth/: rbac.py
math-anything/math_anything/categories/: __init__.py  builder.py  engine.py  graph.py  query.py
math-anything/math_anything/check/: __init__.py  abaqus_check.py  ansys_check.py  base.py  comsol_check.py  lammps_check.py  qe_check.py  vasp_check.py
math-anything/math_anything/codegen/: __init__.py  constraint_inference.py  doc_analyzer.py  harness_generator.py  semantic_mapper.py  source_analyzer.py
math-anything/math_anything/commands/: __init__.py  agent_cmd.py  config_cmd.py  generate_cmd.py  rag_cmd.py  visualize_cmd.py  watch_cmd.py
math-anything/math_anything/conjugacy/: __init__.py
math-anything/math_anything/constants/: __init__.py
math-anything/math_anything/constraints/: __init__.py  boundary.py  domain.py  invariant.py  propagation.py
math-anything/math_anything/core/: __init__.py  cross_engine.py  extractor.py  harness.py  session.py
math-anything/math_anything/dimensional/: __init__.py  equation_checker.py  (+1 more)
math-anything/math_anything_rs/: Cargo.toml  rust-toolchain.toml
math-anything/server/: claude_desktop_config.json  claude_desktop_config_uv.json  mcp_config.json  mcp_server.py  mcp_server_legacy.py
math-anything/skill/: SKILL.md
math-anything/tests/: conftest.py  test_mcp_server.py
math-anything/vasp-harness/: setup.py
math-guard/: .gitignore  README.md  pyproject.toml
math-guard/math_guard/: __init__.py
(+511 files in other folders)
