[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "math-anything"
version = "2.1.0"
description = "Mathematical structure extraction for computational materials science engines"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "toki"}
]
keywords = [
    "materials-science",
    "computational-physics",
    "vasp",
    "lammps",
    "ab-initio",
    "molecular-dynamics",
    "finite-element",
    "mathematical-modeling",
    "llm",
    "ai"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "prompt-toolkit>=3.0.0",
    "pydantic>=2.0.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
]
verify = [
    "sympy>=1.12",
]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
]
lean4 = [
    "lean-dojo>=0.1.0",
]
symmetry = [
    "spglib>=2.0.0",
]
tda = [
    "ripser>=0.6.0",
    "gudhi>=3.7.0",
    "persim>=0.3.0",
]
topology = [
    "pythtb>=1.8.0",
]
dynamics = [
    "nolds>=0.5.0",
    "pydmd>=1.0.0",
]
sindy = [
    "pysindy>=1.7.0",
]
langlands = [
    "cypari2>=2.1.0",
]
sandbox = [
    "e2b>=1.0.0",
]
viz = [
    "plotly>=5.15.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]
mcp = [
    "mcp>=1.0.0",
]
computation = [
    "math-anything[symmetry,tda,topology,dynamics,sindy,langlands,viz]",
]
all = [
    "math-anything[server,verify,llm,lean4,computation,sandbox,dev,mcp]",
]

[project.scripts]
math-anything = "math_anything.cli:main"
cli-anything = "math_anything.cli:main"

[project.urls]
# 国内镜像（Gitee）
Homepage = "https://gitee.com/crested-ibis-0413/math-anything"
Repository = "https://gitee.com/crested-ibis-0413/math-anything"
Issues = "https://gitee.com/crested-ibis-0413/math-anything/issues"
Documentation = "https://gitee.com/crested-ibis-0413/math-anything#readme"
# 国际镜像（GitHub）
GitHub-Homepage = "https://github.com/toki0413/math-anything"
GitHub-Repository = "https://github.com/toki0413/math-anything"
GitHub-Issues = "https://github.com/toki0413/math-anything/issues"

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.setuptools.packages.find]
where = ["math-anything/core"]
include = ["math_anything*"]
