[package]
name = "math_anything_rs"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust core for math-anything: EML engine, category graph, dimensional analysis"

[lib]
name = "math_anything_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
nalgebra = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "eml_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
